--- a/login.html
+++ b/login.html
@@ -45,8 +45,7 @@
         <div class="mail">
           <img src="img/mail.png" alt="" class="mail_icon" />
           <a href="mailto:utkarshsachan140@gmail.com" class="student"
-            >Student Mail</a
-          >
+            >Student Mail</a>
         </div>
       </div>
     </div>
