--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
           <div class="scroll-img">
             <div class="image">Image</div>
             <div class="sc-img">
-              <img src="img/image.jpg" alt="" class="img" />
+              <img src="img/image.webp" alt="" class="img" />
             </div>
           </div>
 
