--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="main">
       <div class="left">
-        <img src="img/loginlogo.jpg" alt="" class="logo" />
+        <img src="img/loginlogo.webp" alt="" class="logo" />
       </div>
       <div class="right">
         <img src="img/lpulogo.jpg" alt="" class="logo1" />
