--- a/home.html
+++ b/home.html
@@ -49,10 +49,10 @@
       <div class="sidebar">
         <a href="" class="side1"> Dashboard</a>
         <a href="" class="side1"> UMS Home</a>
-        <a href="" class="side1"> LPU Live</a>
-        <a href="" class="side1"> LPU Touch</a>
-        <a href="" class="side1"> My Class</a>
-        <a href="" class="side1"> YourDost</a>
+        <a href="https://lpulive.lpu.in/" class="side1" target="_blank"> LPU Live</a>
+        <a href="https://play.google.com/store/apps/details?id=ums.lovely.university&hl=en_IN" class="side1" target="_blank"> LPU Touch</a>
+        <a href="https://lovelyprofessionaluniversity.codetantra.com/secure/home.jsp" class="side1" target="_blank"> My Class</a>
+        <a href="https://yourdost.com/userDashboard" class="side1" target="_blank"> YourDost</a>
       </div>
       <!-- main  -->
       <div class="main-content">
@@ -499,6 +499,9 @@
         <hr />
         <!-- footer  -->
         <div class="footer">Lovely Professional University 2020</div>
+        <div class="anime">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta.
+        </div>
       </div>
     </div>
   </body>
