--- a/home.html
+++ b/home.html
@@ -13,25 +13,78 @@
           <img src="img/logo.jpg" alt="" />
         </div>
         <div class="right">
-          <select name="Academic" id="">
-            <option value="">Academics</option>
-          </select>
+          <div class="nav1">
+            <button class="dropbtn">Academic </button>
+            <div class="drop">
+               Assignments
+                  <a href="">Assignment Download</a>
+                  <a href="">Assignment Upload</a>
+                  <a href="">Practical Upload</a> <br>
 
-          <select name="Academic" id="">
-            <option value="">Administrative</option>
-          </select>
+                  Cohort
+                  <a href="">Assignment Download</a>
+                  <a href="">Assignment Upload</a>
+                  <a href="">Practical Upload</a>
 
-          <select name="Academic" id="">
-            <option value="">Important Links</option>
-          </select>
+            </div>
+           </div>
 
-          <select name="Academic" id="">
-            <option value="">Student Services</option>
-          </select>
+           <div class="nav1">
+            <button class="dropbtn">Administrative</button>
+            <div class="drop">
+              Assignments
+                  <a href="">Assignment Download</a>
+                  <a href="">Assignment Upload</a>
+                  <a href="">Practical Upload</a> <br>
 
-          <select name="Academic" id="">
-            <option value="">Quick Links</option>
-          </select>
+                  Cohort
+                  <a href="">Assignment Download</a>
+                  <a href="">Assignment Upload</a>
+                  <a href="">Practical Upload</a>
+            </div>
+           </div>
+           <div class="nav1">
+            <button class="dropbtn">Important Links</button>
+            <div class="drop">
+              Assignments
+              <a href="">Assignment Download</a>
+              <a href="">Assignment Upload</a>
+              <a href="">Practical Upload</a> <br>
+
+              Cohort
+              <a href="">Assignment Download</a>
+              <a href="">Assignment Upload</a>
+              <a href="">Practical Upload</a>
+            </div>
+           </div>
+           <div class="nav1">
+            <button class="dropbtn">Student Services</button>
+            <div class="drop">
+              Assignments
+              <a href="">Assignment Download</a>
+              <a href="">Assignment Upload</a>
+              <a href="">Practical Upload</a> <br>
+
+              Cohort
+              <a href="">Assignment Download</a>
+              <a href="">Assignment Upload</a>
+              <a href="">Practical Upload</a>
+            </div>
+           </div>
+           <div class="nav1">
+            <button class="dropbtn">Quick Links</button>
+            <div class="drop">
+              Assignments
+              <a href="">Assignment Download</a>
+              <a href="">Assignment Upload</a>
+              <a href="">Practical Upload</a> <br>
+
+              Cohort
+              <a href="">Assignment Download</a>
+              <a href="">Assignment Upload</a>
+              <a href="">Practical Upload</a>
+            </div>
+           </div>
 
           <div class="name">
             Utkarsh Sachan
