--- a/home.html
+++ b/home.html
@@ -552,9 +552,9 @@
         <hr />
         <!-- footer  -->
         <div class="footer">Lovely Professional University 2020</div>
-        <div class="anime">
+        <!-- <div class="anime">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta.
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
