--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
           </div>
 
           <div class="log">
-            <img src="img/CV Img.jpeg" alt="" /><br />
+            <img src="img/CV-Img.webp" alt="" /><br />
             <button>Sign out</button>
           </div>
         </div>
