--- a/home.html
+++ b/home.html
@@ -462,7 +462,7 @@
         <div class="main">
           <div class="imagelast">
             <div class="fac_log">
-              <img src="img/CV Img.jpeg" alt="" /><br />
+              <img src="img/CV-Img.webp" alt="" /><br />
             </div>
             <div class="mentor">MENTOR</div>
             <br />
@@ -484,7 +484,7 @@
           </div>
           <div class="imagelast">
             <div class="fac_log">
-              <img src="img/CV Img.jpeg" alt="" /><br />
+              <img src="img/CV-Img.webp" alt="" /><br />
             </div>
             <div class="mentor">MENTOR</div>
             <br />
@@ -506,7 +506,7 @@
           </div>
           <div class="imagelast">
             <div class="fac_log">
-              <img src="img/CV Img.jpeg" alt="" /><br />
+              <img src="img/CV-Img.webp" alt="" /><br />
             </div>
             <div class="mentor">MENTOR</div>
             <br />
@@ -528,7 +528,7 @@
           </div>
           <div class="imagelast">
             <div class="fac_log">
-              <img src="img/CV Img.jpeg" alt="" /><br />
+              <img src="img/CV-Img.webp" alt="" /><br />
             </div>
             <div class="mentor">MENTOR</div>
             <br />
